# rag-document-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  test_models.py
.github/workflows/: ci.yml
tests/: test_app.py
