[project]
name = "rag-document-chat"
version = "1.0.0"
description = "RAG (Retrieval-Augmented Generation) application for chatting with PDF documents using Google Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "llm", "langchain", "streamlit", "gemini", "ai", "chatbot"]

dependencies = [
    "chromadb>=1.4.1",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
